telerun-out/0198970/compile-log.txt
/tmp/tmpmpigjbqf/source.cu(100): error: identifier "ILP" is undefined
          for (uint32_t j = lane; j < img_size; j += 32 * ILP) {
                                                          ^

/tmp/tmpmpigjbqf/source.cu(258): error: too few arguments in function call
      mandelbrot_gpu_vector_ilp<<<1, 32>>>(img_size, max_iters, out);
                                                                   ^

2 errors detected in the compilation of "/tmp/tmpmpigjbqf/source.cu".
